fixed: Statistics jumps while changing the charts, width of chart

--- a/src/styles/Chart.module.scss
+++ b/src/styles/Chart.module.scss
@@ -2,11 +2,11 @@ $jumbotronColor: #747474;
 
 @import "./variables";
 .area{
-    min-height: 380px;
-    width: 50%;
+    min-height: 475px;
+    width: 60%;
     background-color: $cardGrey;
     border-radius: 15px;
 }
 .tab-toggle-image{
-    height: 28px;
+    height: 25px;
 }
